sfdc-ac-transition-pkg/force-app/main/default/objects/ISV_Limitation_Warning__mdt/ISV_Limitation_Warning__mdt.object-meta.xml
<CustomObject>
    <description>Managed packages known to conflict with an industry upgrade</description>
    <label>ISV Limitation Warning</label>
    <pluralLabel>ISV Limitation Warning</pluralLabel>
</CustomObject>