sfdc-ac-transition-pkg/force-app/main/default/objects/ISV_Limitation_Warning__mdt/fields/Custom_Label__c.field-meta.xml
<CustomField>
    <fullName>Custom_Label__c</fullName>
    <inlineHelpText>Developer name of custom label for text to display when this ISV package is detected</inlineHelpText>
    <label>Custom Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>