sfdc-ac-transition-pkg/force-app/main/default/objects/ISV_Limitation_Warning__mdt/fields/HidePackage__c.field-meta.xml
<CustomField>
    <fullName>HidePackage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HidePackage</label>
    <type>Checkbox</type>
</CustomField>