sfdc-ac-transition-pkg/force-app/main/default/objects/ISV_Limitation_Warning__mdt/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <label>Vertical</label>
    <referenceTo>SFDC_Industry_Vertical__mdt</referenceTo>
    <relationshipLabel>ISV Limitation Warning</relationshipLabel>
    <relationshipName>ISV_Limitation_Warning</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>