sfdc-ac-transition-pkg/force-app/main/default/objects/ISV_Limitation_Warning__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Package_Name__c</columns>
    <columns>Vertical__c</columns>
    <columns>Namespace__c</columns>
    <columns>Custom_Label__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>